PROJECT3_SSM_LOGIN_PRIVATE_EC2/public_ec2.tf
resource "aws_security_group" "web_sg" {
  name        = "web_sg"
  description = "allow http only"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "allow http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "web-sg"
  }
}
